Fixed issue where form was not centered regardless of zoom level - also sits at top of page if zoomed in far enough

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 #form-area {
     width: calc(max(79rem, 100vw));
     height: 45rem;
-    margin-top: 17rem;
+    margin-top: max(calc(50vh - 22.5rem), 0px);
 
     background: #FAFAFD;
 }
